--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
 <head>
     <meta charset="utf-8">
     <title>MovieInfo</title>
-    <link rel="stylesheet" href="https://bootswatch.com/cyborg/bootstrap.min.css">
+    <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900" rel="stylesheet">
+    <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
@@ -17,7 +18,7 @@
         </div>
     </nav>
 
-    <div class="container">
+    <div class="container text-center">
         <div class="jumbotron">
             <h3 class="text-center">Search For Any Movie</h3>
             <form id="searchForm">
