--- a/movie.html
+++ b/movie.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8">
     <title>MovieInfo</title>
-    <link rel="stylesheet" href="https://bootswatch.com/cyborg/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
