Change the Bootstrap theme link

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <title>MovieInfo</title>
     <link href="https://fonts.googleapis.com/css?family=Maven+Pro:400,500,700,900" rel="stylesheet">
-    <link rel="stylesheet" href="https://bootswatch.com/superhero/bootstrap.min.css">
+    <link rel="stylesheet" href="https://bootswatch.com/4/superhero/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
